2009-09-02 22:02 adburton

	* configure.ac, po/POTFILES.in:
	  data/: Makefile.am, rom_info.builder:
	  src/: Makefile.am, gmameui-rominfo-dlg.c, gmameui.h, gui_prefs.h,
	  rom_entry.c, rom_entry.h, xmame_options.c:
	  Add additional information to ROM info dialog, migrate to GtkBuilder

2009-08-29 19:05 adburton

	* src/directories.c: Overwrite invalid default values with MAME subdirs

2009-08-29 18:30 adburton

	* configure.ac, NEWS: Tagged for new release

2009-08-29 17:40 adburton

	* src/gui.c: Fix translation of "No executables" message
	* src/AUTHORS: Update email address

2009-08-12 19:32 adburton

	* src/gmameui.c: Fix compilation errors and warnings

2009-08-11 21:09 adburton

	* src/: game_list.c, gmameui.c, gui_prefs.c, gui_prefs.h, io.c, io.h,
	  mame_options.c, mame_options_legacy.c: Use XDG standard for config dirs;
	  GMAMEUI config moved to ~/.config/gmameui, MAME config moved to
	  ~/.config/mame
	* configure.ac: Remove redundant setting
	

2009-08-10 21:30 adburton

	* src/: game_options.c, game_options.h, network_game.c, network_game.h,
	  Makefile.am:
	* data/: properties.glade, Makefile.am:
	  Delete redundant files

2009-08-10 20:22 adburton

	* src/directories.c, src/gui_prefs.h: When the user sets the value of a directory or file,
	  if the parent directory is 'mame', apply the values for expected settings
	  to unset values

2009-08-10 20:05 adburton

	* AUTHORS, src/about.c: Update translator-credits string, add entry to
	  AUTHORS for translations migrated from GXMame

2009-08-01 19:35 adburton

	* src/: mame_options_legacy.c, mame_options_legacy_dialog.c: Set default
	  values for bufsize, flipx and flipy, set volume as an integer value not a
	  float, load doubles using g_key_file_get_double, not _get_integer.
	  All changes affect XMAME only.

2009-08-01 16:40 adburton

	* src/gmameui-gamelist-view.c: Remove redundant gtk_progressbar_pulse call
	* src/directories.c: Search for SDLMAME executable in $PATH if no
	  executables exist
